fix: camera editor size - preview 320px, card 680x640 so footer is visible

--- a/src/App.scss
+++ b/src/App.scss
@@ -89,8 +89,8 @@ $messenger-height: 370px;
 $marketplace-post-offer-width: 430px;
 $marketplace-post-offer-height: 250px;
 
-$camera-editor-width: 720px;
-$camera-editor-height: 600px;
+$camera-editor-width: 680px;
+$camera-editor-height: 640px;
 
 $camera-checkout-width: 350px;
 
